--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -102,7 +102,7 @@ body {
 
 /*icons*/
 
-.material-icons {
+.side-icons {
     max-width: 50px;
     padding-top: 10px;
     padding-right: 65px;
